--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -266,4 +266,7 @@
 	.half-bottom { margin-bottom: 10px !important; }
 	.add-bottom { margin-bottom: 20px !important; }
 
+/* #SevenBits Additions
+================================================== */
 
+    .img 
