--- a/stylesheets/table.css
+++ b/stylesheets/table.css
@@ -21,7 +21,7 @@ table {
 	background:#eaebec;
 	border:#ccc 1px solid;
     
-    width: 100%;
+  width: 100%;
 
 	-moz-border-radius:3px;
 	-webkit-border-radius:3px;
@@ -55,7 +55,7 @@ table tr:first-child th:last-child {
 	border-top-right-radius:3px;
 }
 table tr {
-	text-align: center;
+	text-align: left;
 	padding-left:20px;
 }
 table td:first-child {
